--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "segundodesafio_moreno",
   "version": "0.0.1",
   "description": "Description",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start":"node server.js",
-    "dev":"nodemon server.js"
+    "start":"node app.js",
+    "dev":"nodemon src/app.js"
     
   },
   "author": "Edison Moreno",
