--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start":"node app.js",
-    "dev":"nodemon src/app.js"
-    
+    "start": "node app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "Edison Moreno",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "moment": "^2.29.4"
+    "express-handlebars": "^7.1.2",
+    "moment": "^2.29.4",
+    "socket.io": "^4.7.2"
   }
 }
