--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-validator": "^7.0.1",
     "moment": "^2.29.4",
     "socket.io": "^4.7.2"
   }
