--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^7.1.2",
     "express-validator": "^7.0.1",
     "moment": "^2.29.4",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "sweetalert2": "^11.10.1"
   }
 }
