--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Edison Moreno",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-validator": "^7.0.1",
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
+    "mongoose-paginate-v2": "^1.7.4",
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.10.1"
   }
