--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "author": "Edison Moreno",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cookies-parser": "^1.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
     "mongoose-paginate-v2": "^1.7.4",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.6.13"
   }
 }
