--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGODB_ATLAS=mongodb+srv://emorenocoder:LKOW5hhojfDlYray@cluster-coder.fz47dr8.mongodb.net/ecommerce?retryWrites=true&w=majority
+SESSION_SECRET=secret
