--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Edison Moreno",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cookies-parser": "^1.2.0",
@@ -19,9 +20,13 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
     "mongoose-paginate-v2": "^1.7.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.6.13"
