--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
 MONGODB_ATLAS=mongodb+srv://emorenocoder:LKOW5hhojfDlYray@cluster-coder.fz47dr8.mongodb.net/ecommerce?retryWrites=true&w=majority
-SESSION_SECRET=secret
+COOKIE_SECRET=SecretCookie
+SESSION_SECRET=SecretSession
+GITHUB_CLIENT_ID=Iv1.8d8429b6aee5d8cc
+GITHUB_CLIENT_SECRET=4e7427aee90aa6cd3fc45890692790a6367eeedd
