Se agregaron helper, patron repository, jwt

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ COOKIE_SECRET=SecretCookie
 SESSION_SECRET=SecretSession
 GITHUB_CLIENT_ID=Iv1.8d8429b6aee5d8cc
 GITHUB_CLIENT_SECRET=72083afc5d6d247d903b96c5130784b9a7f6b894
+JWT_SECRET=jwtoken
